<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Citadels</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="actions">Actions</string>
    <string name="coin">Coin</string>
    <string name="district">District</string>
    <string name="district_back">District back</string>
    <string name="king_counter">King counter</string>
    <string name="character">Character</string>
    
    <string name="grab_cards">Grab cards</string>
    <string name="grab_2coins">Grab 2 coins</string>
    <string name="grab_color_coins">Grab color coins</string>
    <string name="build">Build</string>
    <string name="character_power">Character power</string>
    <string name="done">Done</string>
    
    <string name="hand_icon">Hand</string>
    <string name="log_icon">Log</string>
    
    <string name="log"></string>
    
    <string name="player_name">name</string>
    <string name="player_gold">gold</string>
    <string name="player_hand_size">handsize</string>
    
</resources>
